5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1630_2927.log
== TEST (2019-04-02 16:20:33) 
-- CODE:
bebida=float(input("Qual o valor da bebida?")
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:20:44) 
-- CODE:
bebida=float(input("Qual o valor da bebida?"))
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:21:54) 
-- CODE:
bebida=float(input("Qual o valor da bebida?"))
esfirras=int(input("Quantas esfirras comprou?"))
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:25:02) 
-- CODE:
bebida=float(input("Qual o valor da bebida?"))
esfirras=int(input("Quantas esfirras comprou?"))
preco=float(input("Qual o preco de uma esfirra?"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:26:32) 
-- CODE:
bebida=float(input("Qual o valor da bebida?"))
esfirras=int(input("Quantas esfirras comprou?"))
preco=float(input("Qual o preco de uma esfirra?"))
var1=float(esfirra*preco)
print(float(round)
-- ERROR:
File "XXXX", line 6
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:27:39) 
-- CODE:
bebida=float(input("Qual o valor da bebida?"))
esfirras=int(input("Quantas esfirras comprou?"))
preco=float(input("Qual o preco de uma esfirra?"))
var1=float(esfirra*preco)
print(float(round(var1+bebida)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:09) 
-- CODE:
bebida=float(input("Qual o valor da bebida?"))
esfirras=int(input("Quantas esfirras comprou?"))
preco=float(input("Qual o preco de uma esfirra?"))
print(float(round(esfirra*preco+bebida)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:30:00) 
-- CODE:
bebida=float(input("Qual o valor da bebida?"))
esfirras=int(input("Quantas esfirras comprou?"))
preco=float(input("Qual o preco de uma esfirra?"))
print(float(round(esfirra*preco+bebida, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:30:49) 
-- CODE:
bebida=float(input("Qual o valor da bebida?"))
esfirras=int(input("Quantas esfirras comprou?"))
preco=float(input("Qual o preco de uma esfirra?"))
total=(float(round(esfirra*preco+bebida, 2)))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:22) 
-- CODE:
bebida=float(input("Qual o valor da bebida?"))
esfirras=int(input("Quantas esfirras comprou?"))
preco=float(input("Qual o preco de uma esfirra?"))
total=float(round(esfirras*preco+bebida, 2))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:31:48) 
-- CODE:
bebida=float(input("Qual o valor da bebida?"))
esfirras=int(input("Quantas esfirras comprou?"))
preco=float(input("Qual o preco de uma esfirra?"))
total=float(round(esfirras*preco+bebida, 2))
print(total)
-- EXECUTION TIME:
0.206243
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2927/main.py", line 3, in <module>
    preco=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:53) 
-- CODE:
bebida=float(input("Qual o valor da bebida?"))
esfirras=int(input("Quantas esfirras comprou?"))
preco=float(input("Qual o preco de uma esfirra?"))
total=float(round(esfirras*preco+bebida, 2))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:44:13) 
-- CODE:
bebida=float(input("Qual o valor da bebida?"))
esfirras=int(input("Quantas esfirras comprou?"))
preco=float(input("Qual o preco de uma esfirra?"))
total=round(esfirras*preco+bebida, 2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:44:29) 
-- CODE:
bebida=float(input("Qual o valor da bebida?"))
esfirras=int(input("Quantas esfirras comprou?"))
preco=float(input("Qual o preco de uma esfirra?"))
total=round(esfirras*preco+bebida, 2)
print(total)
-- EXECUTION TIME:
0.164771
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2927/main.py", line 3, in <module>
    preco=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:29) 
-- CODE:
bebida=float(input("Qual o valor da bebida?"))
esfirras=int(input("Quantas esfirras comprou?"))

preco=float(input("Qual o preco de uma esfirra?"))
total=round(esfirras*preco+bebida, 2)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    preco=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:48:02) 
-- CODE:
bebida=float(input("Qual o valor da bebida?"))
esfirras=int(input("Quantas esfirras comprou?"))

preco=float(1.5)
total=round(esfirras*preco+bebida, 2)
print(total)
-- OUTPUT:
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:48:08) 
-- CODE:
bebida=float(input("Qual o valor da bebida?"))
esfirras=int(input("Quantas esfirras comprou?"))

preco=float(1.5)
total=round(esfirras*preco+bebida, 2)
print(total)
-- EXECUTION TIME:
0.0991759
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
7.5
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
9.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
10.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
